--- a/src/app/pages/account/login/login.component.html
+++ b/src/app/pages/account/login/login.component.html
@@ -5,10 +5,10 @@
         <div class="col-lg-4 login-left-bg theme-card">
             <div class="login-left">
                 <h3>Login</h3>
-                <img src="assets/images/icon/logo.svg" alt="VIKRAM CREATION" class="img-fluid">
+                <img src="assets/images/icon/shopping-cart.svg" alt="VIKRAM CREATION" class="img-fluid">
             </div>
         </div>
-        <div class="col-lg-8"> 
+        <div class="col-lg-8">
             <div class="theme-card">
                 <form class="theme-form" [formGroup]="LoginForm">
                     <div class="form-group">
