--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -153,7 +153,7 @@
                         <p class="text-green mb-4">You will save
                             {{ Discount | currency:productService?.Currency.currency:'symbol'}} on this order</p>
                         <div class="text-center">
-                            <a class="btn btn-solid" style="color:#fff;" (click)="ProceedToCheckout()">check out</a>
+                            <a class="btn btn-solid" (click)="ProceedToCheckout()">check out</a>
                         </div>
 
                     </div>
