--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -19,118 +19,46 @@
 <!-- Section ends -->
 
 <!-- thank-you section start -->
-<section class="section-b-space light-layout" *ngIf="orderDetails?.length>0">
+<section class="section-b-space light-layout my-5" *ngIf="orderDetails?.length>0">
     <div class="container">
-        <div class="row">
-            <div class="col-md-12">
+        <div class="order-success-sec">
+            <div class="left-sec">
                 <div class="success-text">
-                    <i class="fa fa-check-circle" aria-hidden="true"></i>
-                    <h2>thank you</h2>
-                    <p>Payment has been received and Order Placed Successfully</p>
-                    <p>Order ID:{{ orderDetails[0].orderNumber }}</p>
+                    <img class="mb-4" src="assets/images/icon/check.svg" alt="Success!">
+                    <h2>Thank you!</h2>
+
+                    <p class="mt-5">Payment has been received and Order Placed Successfully</p>
+                    <p><b>Order ID:{{ orderDetails[0].orderNumber }}</b></p>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
-<!-- Section ends -->
-
-<!-- order-detail section start -->
-<section class="section-b-space" *ngIf="orderDetails?.length>0">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="row order-success-sec">
-                    <div class="col-sm-4">
-                        <h4>summery</h4>
-                        <ul class="order-detail">
-                            <li>order ID: {{ orderDetails[0].orderNumber }}</li>
-                            <li>Order Date: {{ orderDetails[0].orderDate | date : 'MMM dd, yyyy'}}</li>
-                            <li>Order Total: {{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4">
-                        <h4>shipping address</h4>
-                        <ul class="order-detail">
-                            <li>{{ orderDetails[0].address }}, {{orderDetails[0].city}}</li>
-                            <li>{{ orderDetails[0].state }}</li>
-                            <li>{{ orderDetails[0].country }}, {{ orderDetails[0].zipCode }}</li>
-                            <li>Contact No. {{ orderDetails[0].phone }}</li>
-                        </ul>
-                    </div>
-
-                    <div class="col-sm-4 payment-mode">
-                        <h4>payment method</h4>
-                        <p>Pay on Delivery (Cash/Card). Cash on delivery (COD) available. Card/Net banking acceptance subject to device availability.</p>
-                    </div>
-                    <!-- <div class="col-md-12">
-                        <div class="delivery-sec">
-                            <h3>expected date of delivery</h3>
-                            <h2>{{ orderDetails[0].orderDate | date : 'MMM dd, yyyy' }}</h2>
+            <div class="right-sec">
+                <div class="order-summary mb-5">
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <h4>summery</h4>
+                            <ul class="order-detail">
+                                <li><span>order ID:</span> {{ orderDetails[0].orderNumber }}</li>
+                                <li><span>Order Date:</span> {{ orderDetails[0].orderDate | date : 'MMM dd, yyyy'}}</li>
+                                <li><span>Order Total:</span>
+                                    {{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}
+                                </li>
+                                <li><span>Payment Method:</span> Credit Card (**3569)</li>
+                            </ul>
                         </div>
-                    </div> -->
+                        <div class="col-md-6 mb-3">
+                            <h4>shipping address</h4>
+                            <ul class="order-detail">
+                                <li>{{ orderDetails[0].address }}, {{orderDetails[0].city}}</li>
+                                <li>{{ orderDetails[0].state }}</li>
+                                <li>{{ orderDetails[0].country }}, {{ orderDetails[0].zipCode }}</li>
+                                <li>Contact No. {{ orderDetails[0].phone }}</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-lg-12">
-                <div class="product-order">
-                    <h3>your order details</h3>
-                    <!-- <div class="row product-order-detail">
-                        <div class="col-3 order_detail">
-                            <h4>Product Image</h4>
-                        </div>
-                        <div class="col-6 order_detail">
-                            <h4>product name</h4>
-                        </div>
-                        <div class="col-1 order_detail">
-                            <h4>Qty</h4>
-                        </div>
-                        <div class="col-2 order_detail">
-                            <h4>price</h4>
-                        </div>
-                    </div>
-                    <div class="row product-order-detail" *ngFor="let product of orderDetails[0].orderDetails">
-                        <div class="col-3">
-                            
-                            <img *ngIf="product?.setNo>0" [src]="ProductImage+product?.productId+'/productSetImage/'+product?.setNo+'/'+product?.productImg[0]" class="img-fluid">
-                            <img *ngIf="product?.setNo==0" [src]="ProductImage+product?.productId+'/productColorImage/'+product?.productSizeColorId+'/'+product?.productImg[0]" class="img-fluid">
-                        </div>
-                        <div class="col-6 order_detail">
-                            <div>
-                                <h5>{{ product?.productName }}</h5>
-                            </div>
-                        </div>
-                        <div class="col-1 order_detail">
-                            <div>
-                                <h5>{{ product.quantity }}</h5>
-                            </div>
-                        </div>
-                        <div class="col-2 order_detail">
-                            <div>
-                                <h5>{{ product?.price | currency:productService?.Currency.currency:'symbol' }}
-                                </h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="total-sec">
-                        <ul>
-                            <li>Subtotal
-                                <span>{{ orderDetails[0].subTotal | currency:productService?.Currency.currency:'symbol' }}</span>
-                            </li>
-                            <li>Shipping
-                                <span>{{ orderDetails[0].shippingCharge>0 ? (orderDetails[0].shippingCharge  | currency:productService?.Currency.currency:'symbol') : 'Free Shipping'}}</span>
-                            </li>
-                            <li>GST (18%)
-                                <span>{{ orderDetails[0].tax  | currency:productService?.Currency.currency:'symbol'}}</span>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="final-total">
-                        <h3>total
-                            <span>{{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}</span>
-                        </h3>
-                    </div> -->
-                    <div class="order-box">
+                <h4 class="mb-4">Your Order Details</h4>
+                <div class="order-box">
+                    <div class="table-responsive-sm">
                         <table class="table table-bordered table-hover">
                             <thead class="thead-dark">
                                 <tr>
@@ -172,7 +100,8 @@
                                         {{ product?.gstAmount | currency:productService?.Currency.currency:'symbol'}}
                                     </td>
                                     <td>
-                                        <span style="float: right; font-size: 16px; line-height: 20px;  font-weight: 400;">
+                                        <span
+                                            style="float: right; font-size: 16px; line-height: 20px;  font-weight: 400;">
                                             {{ (product.price*product?.quantity+product?.gstAmount) | currency:productService?.Currency.currency:'symbol' }}</span>
                                     </td>
                                 </tr>
@@ -189,8 +118,9 @@
                                         <b>{{ getTotalGSTAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
                                     </td>
                                     <td>
-                                        <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
-                                        {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
+                                        <span
+                                            style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                            {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
                                     </td>
                                 </tr>
 
@@ -199,8 +129,9 @@
                                         <b> Packing</b>
                                     </td>
                                     <td colspan="2">
-                                        <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
-                                             <b>Free Packing</b></span>
+                                        <span
+                                            style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                            <b>Free Packing</b></span>
                                     </td>
                                 </tr>
                                 <tr class="total">
@@ -208,7 +139,8 @@
                                         <b>Total</b>
                                     </td>
                                     <td>
-                                        <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                        <span
+                                            style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
                                             {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
                                     </td>
                                 </tr>
@@ -217,8 +149,6 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
     </div>
 </section>
