--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -21,11 +21,13 @@
                          <a [routerLink]="['/shop/wishlist']"><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a>
                             &nbsp;
                         </li> -->
-                        <li class="onhover-dropdown mobile-account" *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
-                            <span class="Logininfo"><a (click)="Login()" class="btn btn-solid btn-solid-small"><i class="fa fa-user"
-                                        aria-hidden="true"></i>Login</a></span>
+                        <li class="onhover-dropdown mobile-account"
+                            *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
+                            <span class="Logininfo"><a (click)="Login()" class="btn btn-solid btn-solid-small"><i
+                                        class="fa fa-user" aria-hidden="true"></i>Login</a></span>
                         </li>
-                        <li class="onhover-dropdown mobile-account" *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
+                        <li class="onhover-dropdown mobile-account"
+                            *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
                             <i class="fa fa-user" aria-hidden="true"></i> {{LoggedInUser[0].name}}
                             <ul class="onhover-show-div">
                                 <li>
@@ -51,25 +53,21 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="main-menu">
-                    <div class="menu-left">
-                        <app-left-menu></app-left-menu>
-                        <div class="brand-logo">
-                            <a routerLink="/home/fashion" id="headerlogo">
-                                <img [src]="themeLogo" class="img-fluid logo-size" alt="logo">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="menu-right pull-right">
-                        <div>
-                            <app-menu></app-menu>
-                        </div>
-                        <div>
-                            <app-settings></app-settings>
-                        </div>
-                    </div>
+        <div class="main-menu">
+            <div class="menu-left">
+                <app-left-menu></app-left-menu>
+                <div class="brand-logo">
+                    <a routerLink="/home/fashion" id="headerlogo">
+                        <img [src]="themeLogo" class="img-fluid logo-size" alt="logo">
+                    </a>
+                </div>
+            </div>
+            <div class="menu-right pull-right">
+                <div>
+                    <app-menu></app-menu>
+                </div>
+                <div>
+                    <app-settings></app-settings>
                 </div>
             </div>
         </div>
