--- a/src/assets/scss/theme/_menu.scss
+++ b/src/assets/scss/theme/_menu.scss
@@ -1417,7 +1417,7 @@ header {
                 }
             }
             .navbar {
-                padding: 30px 45px 30px 0 !important;
+                // padding: 30px 45px 30px 0 !important;
             }
         }
         .menu-right {
