--- a/src/app/pages/account/login/login.component.html
+++ b/src/app/pages/account/login/login.component.html
@@ -29,7 +29,7 @@
                     </div>
                 </form>
                 <div class="authentication-right text-center mt-5">
-                    <p>If you are new please <button class="btn btn-link" (click)="Register();">Create an Account</button></p>
+                    <p> <button class="btn btn-link" (click)="Register();">Create new Account</button></p>
                     
                 </div>
                 <a class="close" (click)="close()"><img src="assets/images/icon/close.svg" alt="Close" ></a>
